update load tester for more connections.
update framework test example to use more connections